Add foreign key to snippets table. Add test sequelize queries to all routes.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
          <br>
          <br>
 
-         <button type="button" class="btn btn-secondary">Get Started</button>
+         <button type="button" class="btn btn-secondary" id="get-started">Get Started</button>
 
       </div>
       {{!-- outline this div --}}
@@ -40,3 +40,21 @@
    </div>
 
 </div>
+
+<script>
+
+$("#get-started").on("click", function(event) {
+   // test post for creating new snippet
+   // $.post("/dashboard");
+
+   // Test ajax for updating snippet info
+   // $.ajax({
+   //    method: "PUT",
+   //   url: "/dashboard"
+   // })
+
+   // test post for new user registration
+   $.post("/registration");
+})
+
+</script>
