Modularize controllers/routes.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,16 +45,16 @@
 
 $("#get-started").on("click", function(event) {
    // test post for creating new snippet
-   // $.post("/dashboard");
+   $.post("/dashboard");
 
    // Test ajax for updating snippet info
-   // $.ajax({
-   //    method: "PUT",
+   //$.ajax({
+   //   method: "PUT",
    //   url: "/dashboard"
-   // })
+   //})
 
    // test post for new user registration
-   $.post("/registration");
+   // $.post("/registration");
 })
 
 </script>
