--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,13 +22,42 @@
       <div class="col-6">
          {{!-- image logo needs to be inserted --}}
 
-         {{!-- tutorial to explain site --}}
+         <div class="container" id="tutorial">
+            How Codex Works
+            <br>
+            <br>
+            <div class="row">
+               <div class="col-sm">
+                  <img src="./images/copy.png" class="icons">
+               </div>
+               <div class="col-sm">
+                  <img src="./images/dashboard.png" class="icons">
+               </div>
+
+               <div class="col-sm">
+                  <img src="./images/searchcloud.png" class="icons">
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-sm">
+                  Copy and Paste your favorite code snippet
+               </div>
+               <div class="col-sm">
+                  The snippet will be saved to your dashboard
+               </div>
+               <div class="col-sm">
+                  Seach our library for snippets other users have submitted
+               </div>
+
+            </div>
+         </div>
 
          <br>
          <br>
          <br>
-
-         <button type="button" class="btn btn-secondary" id="get-started">Get Started</button>
+         {{!-- need to insert route to page on button click --}}
+         <a href="#" class="btn btn-secondary btn-lg active" id="getStarted" role="button" aria-pressed="true">Get
+            Started</a>
 
       </div>
       {{!-- outline this div --}}
@@ -40,3 +69,7 @@
    </div>
 
 </div>
+
+<script>
+
+</script>
