--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
    <div class="row">
       <div class="col-lg-3" id="dashboard-nav">
          {{#each languages}}
@@ -6,6 +6,13 @@
             <div class="language">
                {{language}}
             </div>
+            
+            {{#each tags}}
+            <div class="tag">
+            {{tag}}
+            </div>
+            {{/each}}
+
          </div>
          {{/each}}
       </div>
