--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
       crossorigin="anonymous">
    
    <!-- Custom CSS -->
-   <link rel="stylesheet" href="../public/css/style.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
 
    <!-- Font Awesome Icons ?? -->
 
@@ -22,7 +22,7 @@
    <script src="https://code.jquery.com/jquery.js"></script>
 
    <!-- Javascript -->
-   <script src="../public/js/app.js"></script>
+   <script src="js/app.js"></script>
 </head>
 
 <body>
