Adjust dashboard routes. Add delete snippet route. Add delete snippet test form.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@ body {
 
 #codex-navbar {
    height: 10%;
+   border-bottom: 1px solid lightgrey;
    background: #3CA55C;
    background: -webkit-linear-gradient(to left, rgb(45, 159, 79), rgb(36, 128, 64));
    background: linear-gradient(to left, rgb(58, 205, 102), rgb(28, 160, 68));
@@ -65,7 +66,6 @@ body {
 
 #dashboard-nav {
    background-color: rgb(33,33,33);
-   border-top: 1px solid lightgrey;
    border-right: 1px solid lightgrey;
    color: rgb(235, 235, 235);
    padding: 0;
@@ -96,7 +96,6 @@ body {
 
 #dashboard-display {
    background-color: rgb(235, 235, 235);
-   border-top: 1px solid lightgrey;
    width: 100%;
    padding: 0;
    height: 90%;
