--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -54,7 +54,7 @@
 <form id="newSnippet">
    <div class="form-group">      
       <label for="snippet">Snippet:</label>
-      <input type="text" name="snippet" id="snippet">
+      <textarea name="snippet" id="snippet" cols="30" rows="10"></textarea>
    </div>
    <div class="form-group">
       <label for="language">Langauge (e.g. "Javascript"):</label>
