Add placeholder login button and search bar (no functionality for now).

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,12 @@
 <div id="main-container">
    <nav class="navbar navbar-light bg-light" id="codex-navbar">
-      <span class="navbar-brand mb-0 h1">Codex</span>
+      <div class="col-4">
+         <span class="navbar-brand mb-0 h1">Codex</span>
+      </div>
+      <div class="col-8 d-flex justify-content-end">
+         <input type="search" id="search-bar">
+         <button id="login-button">Login</button>
+      </div>   
    </nav>
    <div class="container-fluid" id="dashboard-container">
       <div class="row">
