--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,30 @@ form {
 /* dashboard.handlebars styling */
 body {
    overscroll-behavior: none;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#login-button {
+   background: none;
+   color: white;
+   border: 2px solid white;
+   border-radius: 5px;
+   transition: all 300ms;
+}
+
+#login-button:hover {
+   background: white;
+   color: rgb(58, 205, 102);
+}
+
+#search-bar {
+   border: none;
+   border-radius: 5px;
+   margin-right: 20px;
+}
+
+#search-bar:focus {
+   outline: 0;
 }
 
 #codex-navbar {
