--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,6 +93,7 @@ body {
    border-right: 1px solid rgb(235, 235, 235);
    color: white;
    padding: 0;
+   cursor: pointer;
 
    height: 90%;
    width: 30%;
