--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,17 @@ body {
    overflow-x: hidden;
 }
 
+#manage-snippets-button {
+   padding: 10px 20px;
+   font-size: 20px;
+   border-bottom: 1px solid rgb(235, 235, 235);
+   transition: color 300ms;
+}
+
+#manage-snippets-button:hover {
+   color: rgb(58, 205, 102);
+}
+
 .language-container {
    border-bottom: 1px solid rgb(235, 235, 235);
 }
@@ -111,11 +122,21 @@ body {
 .language {
    padding: 10px 20px;
    font-size: 20px;
+   transition: color 300ms;
+}
+
+.language:hover {
+   color: rgb(58, 205, 102);
 }
 
 .tag {
    border-top: 1px solid rgb(235, 235, 235);
    padding: 5px 40px;
+   transition: color 300ms;
+}
+
+.tag:hover {
+   color: rgb(58, 205, 102);
 }
 
 #dashboard-display {
