--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -91,11 +91,13 @@
             code.text(res[i].snippet);
             snippet.append(code);
 
-            var language = $("<h4>").text(res[i].language);
-            var tags = $("<h6>").text(res[i].tags);
-            var description = $("<p>").text(res[i].description)
+            var language = $("<p>").text("Language: " + res[i].language).addClass("font-weight-bold");
+            var tags = $("<p>").text("Tags: " + res[i].tags).addClass("font-weight-bold");
+            var description = $("<p>").text("Description: " + res[i].description).addClass("font-weight-bold");
 
-            newCard.append(snippet, language, tags, description);
+            var deleteButton = $("<button>").attr("id", "deleteSnippet").attr("data-id", res[i].id).text("Delete Snippet").addClass("btn btn-success mt-3");
+
+            newCard.append(snippet, language, tags, description, deleteButton);
 
             $("#dashboard-display").append(newCard);
          }
@@ -136,6 +138,24 @@
          $.post("/dashboard/newSnippet", newSnippet).then(function (res) {
             location.reload();
          })
+      })
+
+      $(document).on("click", "#deleteSnippet", function (event) {
+         event.preventDefault();
+
+         var id = $(this).attr("data-id");
+
+         var deleteSnippet = {
+            id: id
+         }
+
+         $.ajax({
+            method: "DELETE",
+            url: "/dashboard/deleteSnippet",
+            data: deleteSnippet
+         }).then(function (res) {
+            location.reload();
+         });
       })
 
    })
