Add search button and styles (no functionality).

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#login-button {
+#login-button, #search-button {
    background: none;
    color: white;
    border: 2px solid white;
@@ -59,9 +59,14 @@ body {
    transition: all 300ms;
 }
 
-#login-button:hover {
+#login-button:hover, #search-button:hover {
    background: white;
    color: rgb(58, 205, 102);
+}
+
+#nav-separator {
+   color: white;
+   margin: 0 20px;
 }
 
 #search-bar {
