--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,6 +5,8 @@
       </div>
       <div class="col-8 d-flex justify-content-end">
          <input type="search" id="search-bar">
+         <button id="search-button">Search</button>
+         <span id="nav-separator">|</span>
          <button id="login-button">Login</button>
       </div>
    </nav>
