--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,13 +55,13 @@ body {
    background: none;
    color: white;
    border: 2px solid white;
-   border-radius: 5px;
+   border-radius: 4px;
    transition: all 300ms;
 }
 
 #login-button:hover, #search-button:hover {
    background: white;
-   color: rgb(58, 205, 102);
+   color: #2980b9;
 }
 
 #nav-separator {
@@ -71,7 +71,7 @@ body {
 
 #search-bar {
    border: none;
-   border-radius: 5px;
+   border-radius: 4px;
    margin-right: 20px;
 }
 
@@ -82,9 +82,13 @@ body {
 #codex-navbar {
    height: 10%;
    border-bottom: 1px solid rgb(235, 235, 235);
-   background: #3CA55C;
+   /* background: #3CA55C;
    background: -webkit-linear-gradient(to left, rgb(45, 159, 79), rgb(36, 128, 64));
-   background: linear-gradient(to left, rgb(58, 205, 102), rgb(28, 160, 68));
+   background: linear-gradient(to left, rgb(58, 205, 102), rgb(28, 160, 68)); */
+
+   background: #2980b9; 
+   background: -webkit-linear-gradient(to left, #2980b9, #1a5379);
+   background: linear-gradient(to left, #2980b9, #1a5379);
 }
 
 .navbar-brand {
@@ -117,7 +121,7 @@ body {
 }
 
 #new-snippet-button:hover {
-   color: rgb(58, 205, 102);
+   color: #40bff5;
 }
 
 .language-container {
@@ -131,7 +135,7 @@ body {
 }
 
 .language:hover {
-   color: rgb(58, 205, 102);
+   color: #40bff5;
 }
 
 .tag {
@@ -141,7 +145,7 @@ body {
 }
 
 .tag:hover {
-   color: rgb(58, 205, 102);
+   color: #40bff5;
 }
 
 #dashboard-display {
@@ -157,4 +161,17 @@ body {
    right: 0;
    overflow-x: hidden;
 }
+
+.delete-button, .submit-button {
+   background-color: #2980b9;
+   color: white;
+   transition: all 300ms!important;
+}
+
+.delete-button:hover, .submit-button:hover {
+   background-color: #1a5379;
+   color: white;
+}
+
+
 /***********/
