--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,13 +162,13 @@ body {
    overflow-x: hidden;
 }
 
-.delete-button, .submit-button {
+.delete-button, .submit-button, .edit-button {
    background-color: #2980b9;
    color: white;
    transition: all 300ms!important;
 }
 
-.delete-button:hover, .submit-button:hover {
+.delete-button:hover, .submit-button:hover, .edit-button:hover {
    background-color: #1a5379;
    color: white;
 }
