--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,9 @@
    <!-- jQuery -->
    <script src="https://code.jquery.com/jquery.js"></script>
 
+   {{!-- chosen.js --}}
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
+
    <!-- Javascript -->
    <script src="js/app.js"></script>
 </head>
