--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,13 +10,19 @@
    <!-- Bootstap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous">
+   
+   <!-- Custom Fonts ?? -->
+   <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
+   
+   {{!-- highlight.js --}}
+   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/atom-one-dark.min.css">
+   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
+   <script>hljs.initHighlightingOnLoad();</script>
 
    <!-- Custom CSS -->
    <link rel="stylesheet" href="css/style.css" type="text/css">
 
    <!-- Font Awesome Icons ?? -->
-
-   <!-- Custom Fonts ?? -->
 
    <!-- jQuery -->
    <script src="https://code.jquery.com/jquery.js"></script>
