--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ body {
 #login-button, #search-button {
    background: none;
    color: white;
-   border: 2px solid white;
+   border: 1px solid white;
    border-radius: 4px;
    transition: all 300ms;
 }
@@ -93,12 +93,13 @@ body {
 
 .navbar-brand {
    color: white!important;
-   letter-spacing: 3px;
+   letter-spacing: 10px;
    font-size: 25px;
+   font-family: 'Faster One', cursive;
 }
 
 #dashboard-nav {
-   background-color: rgb(33,33,33);
+   background-color: rgb(40,44,51);
    border-right: 1px solid rgb(235, 235, 235);
    color: white;
    padding: 0;
@@ -171,6 +172,10 @@ body {
 .delete-button:hover, .submit-button:hover, .edit-button:hover {
    background-color: #1a5379;
    color: white;
+}
+
+pre, code {
+   border-radius: 3px;
 }
 
 
