--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,9 @@
    {{!-- chosen.js --}}
    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
 
+   {{!-- anime.js --}}
+   <script src="js/anime.min.js"></script>
+
    <!-- Javascript -->
    <script src="js/app.js"></script>
 </head>
