Adjust animation timing.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -49,6 +49,7 @@
          opacity: [0, 1],
          translateX: [-250, 0],
          duration: 1000,
+         offset: '+=250',
          delay: (el, i) => 100 * i
       })
 
